--- a/Management/src/AspDotNet4/CloudFoundryOwinAutofac/Views/Home/Index.cshtml
+++ b/Management/src/AspDotNet4/CloudFoundryOwinAutofac/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
             <li><h5><a href="/cloudfoundryapplication/heapdump">Heap Dump (might take a little while to load...)</a></h5></li>
             <li><h5><a href="/cloudfoundryapplication/info">Info</a></h5></li>
             <li><h5><a href="/cloudfoundryapplication/loggers">Loggers</a></h5></li>
+            <li><h5><a href="/cloudfoundryapplication/mappings">Mappings</a></h5></li>
             <li><h5><a href="/cloudfoundryapplication/metrics">Metrics</a></h5></li>
             <li><h5><a href="/cloudfoundryapplication/dump">Thread Dump</a></h5></li>
             <li><h5><a href="/cloudfoundryapplication/trace">Trace</a></h5></li>
